# avixz.github.io

./: CNAME  ModelViewer.html  ModelViewer.js  docs.html  index.html  style.css
AncientRuins/: index.html  package-lock.json  package.json
AncientRuins/models/: AncientRuins.blend  AncientRuins.blend1  AncientRuins.glb  AncientRuins1.blend  AncientRuins1.blend1  AncientRuinsBaking.blend  AncientRuinsBaking.blend1
AncientRuins/src/: AncientRuins.jsx  App.jsx
DieselPunk/: index.html  package.json
DieselPunk/models/: DieselPunk.blend  DieselPunk.blend1
ExplorerIsabella/: package-lock.json
ExplorerIsabella/models/: DieselPunk.blend  DieselPunk.blend1
ForestRoad/: index.html  package-lock.json  package.json
ForestRoad/models/: ForestRoad.blend  ForestRoad.blend1
ForestRoad/public/: ForestRoad.glb  docs.html
ForestRoad/src/: App.jsx  ForestRoad.jsx  PineTree.jsx  index.css
FruitCrate/: index.html  index.pck
HelloThreeJs/: package-lock.json  package.json  vite.config.js
HelloThreeJs/src/: script.js
Level1/: index.html
Old/: index.html
Old/AsphaltX/: index.html
Old/HelloThreeJs/: package-lock.json
Old/Pong/: CMakeLists.txt  Game.h  Pong  Pong.html  Pong.js  Pong.wasm
Old/SideScroller/: CMakeLists.txt  Game.h  SideScroller.js  SideScroller.wasm
Portal/: package-lock.json  vite.config.js
Portal/src/: script.js
SDL2Game/: CMakeLists.txt  Game.cpp  Game.h  SDL2Game.html  SDL2Game.js  SDL2Game.wasm  main.cpp  shell_minimal.html
SideScroller/: Game.cpp  SideScroller  shell_minimal.html
SushiBox/: index.html  package-lock.json  package.json
(+16 files in other folders)
